# active-inference-learning

experiments/python/: README.md  pyproject.toml  shell.nix
experiments/python/active_inference/: __main__.py  array_rep.py
experiments/python/notebooks/: examples_1.ipynb
experiments/python/tests/unit/: test_array_rep.py
